# miniboost

./: .gitignore  README.MD  install.sh  subsets.sh
libs/: CMakeLists.txt  local.mk
